--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
+    "sweetalert": "^2.1.0",
+    "sweetalert2": "^7.1.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
